# esp32c3-rust-zig

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
ziglib/: build.zig
